2008-11-04  Wim Taymans  <wim.taymans@collabora.co.uk>

	* tools/gst-launch.c: (event_loop):
	Print the message seqnums.

2008-11-04  Andy Wingo  <wingo@pobox.com>

	* gst/gstutils.c (gst_util_seqnum_next): Refactor for clarity.

2008-11-04  Andy Wingo  <wingo@pobox.com>

	Add sequence numbers to events and messages. See #559250.

	* gst/gstutils.c (gst_util_seqnum_next, gst_util_seqnum_compare):
	API: New functions.

	* gst/gstevent.h:
	* gst/gstevent.c (_gst_event_copy, gst_event_new): Initialize new
	events with a new sequence number, and copy it when copying.
	(gst_event_get_seqnum, gst_event_set_seqnum): API: Accessors for
	an event's sequence number.

	* gst/gstmessage.h:
	* gst/gstmessage.c (_gst_message_copy, gst_message_new_custom):
	(gst_event_get_seqnum, gst_event_set_seqnum): API: As with events,
	so with messages.

	* docs/gst/gstreamer-sections.txt: Add new functions to the docs.

2008-11-04  Wim Taymans  <wim.taymans@collabora.co.uk>

	* docs/manual/advanced-position.xml:
	* docs/manual/basics-bins.xml:
	* docs/manual/basics-bus.xml:
	* docs/manual/basics-pads.xml:
	* docs/manual/intro-gstreamer.xml:
	* docs/manual/intro-preface.xml:
	Some Application Development Manual fixes thanks to
	Andrew Feren. Fixes #558459.

2008-11-03  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstregistrybinary.c:
	  Don't bother with the GTimer if we don't output the results.

2008-11-03  Wim Taymans  <wim.taymans@collabora.co.uk>

	Patch by: David Schleef  <ds@schleef.org>

	* libs/gst/net/Makefile.am:
	Add WIN32_LIBS to libgstnet LIBADD. Fixes #557300.

2008-10-31  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstregistrybinary.c:
	  Oh my, studip, stupid me. Remove double stat() call.

2008-10-31  Stefan Kost  <ensonic@users.sf.net>

	* gst/gstpreset.c:
	  Use g_unlink instead of unlink.

	* gst/gststructure.c:
	  Use glib type.

	* gst/gstutils.c:
	  Add a FIXME:.

	* gst/gsttaglist.c:
	* gst/gsttypefind.c:
	* gst/gstvalue.c:
	  Formatting & whitespaces.
