@@ -1,5 +1,16 @@
 2008-11-04  Wim Taymans  <wim.taymans@collabora.co.uk>
 
+	* gst/gstbin.c: (bin_handle_async_start),
+	(gst_bin_handle_message_func), (gst_bin_query):
+	* libs/gst/base/gstbasesink.c: (gst_base_sink_render_object),
+	(gst_base_sink_event), (gst_base_sink_change_state):
+	* libs/gst/base/gstbasesrc.c: (gst_base_src_perform_seek),
+	(gst_base_src_loop), (gst_base_src_change_state):
+	Copy seqnums from events to messages so that they can all be related
+	back to eachother.
+
+2008-11-04  Wim Taymans  <wim.taymans@collabora.co.uk>
+
 	* tools/gst-launch.c: (event_loop):
 	Print the message seqnums.
 
